--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,700&display=swap" rel="stylesheet">
-  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | Shortly URL shortening API Challenge</title>
@@ -63,9 +64,13 @@
         </div>
         <img src="./images/illustration-working.svg" alt="">
       </div>
-      <div class="shorten-section">
-        <input type="text" name="shorten-input" id="shorten-input" placeholder="Shorten a link here...">
-        <button class="btn shorten-btn">Shorten It!</button>
+      <div>
+        <div class="shorten-section">
+          <div class="shortest-section">
+          <input type="text" name="shorten-input" id="shorten-input" placeholder="Shorten a link here...">
+          <button class="btn shorten-btn">Shorten It!</button>
+            </div>
+        </div>
       </div>
     </div>
   </div>
